[package]
name = "eventually-app-example"
version = "0.1.0"
edition = "2018"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
license = "MIT"

[dependencies]
eventually = { version = "0.4.0", features = ["full"] }

chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
envconfig = "0.10.0"
envconfig_derive = "0.10.0"
futures = "0.3.17"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
smol = "1.2.5"
tide = "0.16.0"
tokio-postgres = "0.7.2"
femme = "2.1.1"
anyhow = "1.0.44"

[dev-dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
lazy_static = "1.4.0"
